option java_package = "com.zero.example.protobuf";
import "Structure.proto";
//输出的java类名
option java_outer_classname = "UpdatePlayerPro";

message SC_UpdateUserMasterInfo{
	required int64 masterId = 1;
	//师父类别(0:没有门派,1:NPC, 2:Player)
	required int32 masterType = 2;
}

message SC_UpdateUserSkillGroupInfo{
	// 角色拥有的技能组
	repeated SkillGroupInfoProtocol skillGroupInfo = 1;
}

message SC_UpdatePlayerInfo{
	required PlayerInfoProtocol playerInfo = 1;
}

message SC_LevelUp{
	required int32 userLevel = 1;
}

message SC_UpdatePlayerYuanBao{
	//玩家当前拥有的元宝
	required int32 yuanBao = 1;
}